# oracle-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MCP_SETUP.md  README.md  mcp-config-example.json  pyproject.toml  requirements.txt
oracle_cli/: __init__.py  __main__.py  cli.py  config.py  db.py  mcp_server.py  tui.py
