[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-cli"
version = "1.2.4"
description = "Interactive Terminal User Interface (TUI) for Oracle Database exploration with MCP support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Oğuzhan Kalelioğlu", email = "oguzhan@example.com"}
]
keywords = ["oracle", "database", "tui", "cli", "terminal", "explorer", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "oracledb",
    "click>=8.1.0",
    "rich>=13.7.0",
    "textual>=0.49.0",
    "pyperclip>=1.8.0",
    "mcp>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/oguzhankalelioglu/oracle-cli"
Repository = "https://github.com/oguzhankalelioglu/oracle-cli"
Documentation = "https://github.com/oguzhankalelioglu/oracle-cli#readme"
Issues = "https://github.com/oguzhankalelioglu/oracle-cli/issues"

[project.scripts]
oracle-cli = "oracle_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]

[tool.setuptools]
packages = ["oracle_cli"]

